<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Activities.AddEditRequestActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="Add Request"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/request_id"
                    android:textAlignment="textEnd"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_request_id"
                    android:layout_width="150dp"
                    android:text="Auto-Generated"
                    android:textStyle="italic"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Request Type:"
                    android:layout_marginTop="5dp"
                    android:textAlignment="textEnd"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/spinner_request_type"
                    android:layout_width="230dp"
                    android:layout_height="40dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Start Date:"
                    android:textAlignment="textEnd"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_request_start"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:ems="10"/>
                <Button
                    android:id="@+id/request_start_button"
                    android:layout_width="90dp"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/select"
                    android:onClick="onSelectStart"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="End Date:"
                    android:textAlignment="textEnd"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_request_end"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:ems="10"/>
                <Button
                    android:id="@+id/request_end_button"
                    android:layout_width="90dp"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/select"
                    android:onClick="onSelectEnd"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Status:"
                    android:layout_marginTop="5dp"
                    android:textAlignment="textEnd"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/spinner_request_status"
                    android:layout_width="230dp"
                    android:layout_height="40dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/notes"
                    android:textAlignment="textEnd"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/edit_request_notes"
                    android:layout_width="215dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="14sp"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="2000"
                    android:maxLines="4"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:onClick="onSaveRequest"
                    android:text="@string/save" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:onClick="onCancel"
                    android:text="@string/cancel" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>